[package]
name = "cxx2flow"
version = "0.1.3"
edition = "2018"
description = "Convert your C/C++ code to control flow graph"
license = "MIT"
repository = "https://github.com/Enter-tainer/cxx2flow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cxx2flow"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
[[bin]]
name = "cxx2flow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.42"
clap = "2.33.3"
log = "0.4.14"

[target.'cfg(not(any(target_arch = "wasm32", target_arch="wasm64")))'.dependencies]
tree-sitter-cpp = "0.19.0"
tree-sitter = "0.19.5"

[target.'cfg(any(target_arch = "wasm32", target_arch="wasm64", target_arch="x86_64"))'.dependencies]
web-tree-sitter-sys = "0.2.6"
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
lto = "fat"
