[package]
name = "cxx2flow"
version = "0.2.0"
edition = "2018"
description = "Convert your C/C++ code to control flow graph"
license = "MIT"
repository = "https://github.com/Enter-tainer/cxx2flow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cxx2flow"
path = "src/main.rs"
[lib]
name = "cxx2flow"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.42"
clap = "2.33.3"
log = "0.4.14"
# tree-sitter = "0.19.5"
tree-sitter-cpp = "0.19.0"
tree-sitter-facade = "0.0.9"

[profile.release]
lto = "fat"
